--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Simple signal emitter.",
   "main": "index.js",
   "scripts": {
-    "test": "node test.js"
+    "test": "node test.js",
+    "preversion": "npm test"
   },
   "keywords": [
     "signal",
